--- a/package.json
+++ b/package.json
@@ -103,6 +103,9 @@
     "@types/redux-logger": "3.0.3",
     "@types/sinon": "4.1.2",
     "asar": "0.14.0",
+    "awesome-typescript-loader": "^5.0.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "boiler-room-custodian": "0.6.2",
     "concurrently": "3.5.0",
     "cross-env": "5.0.5",
@@ -117,30 +120,31 @@
     "enzyme-adapter-react-16": "1.0.0",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "1.1.5",
-    "html-webpack-plugin": "2.30.1",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "22.4.2",
     "json-loader": "0.5.7",
-    "node-sass": "4.5.3",
+    "node-sass": "^4.9.0",
     "react-hot-loader": "3.0.0-beta.7",
     "react-test-renderer": "16.0.0",
     "redux-logger": "3.0.6",
-    "sass-loader": "6.0.6",
+    "sass-loader": "^7.0.1",
     "sinon": "4.0.0",
     "spectron": "3.7.2",
     "style-loader": "0.19.0",
-    "ts-loader": "3.1.1",
+    "ts-loader": "^4.3.0",
     "ts-node": "4.1.0",
     "tslint": "5.7.0",
     "tslint-config-prettier": "1.12.0",
-    "typescript": "2.5.2",
+    "typescript": "^2.8.4",
     "uglifyjs-webpack-plugin": "1.2.5",
-    "url-loader": "0.6.2",
-    "webpack": "3.5.6",
-    "webpack-dev-middleware": "2.0.6",
-    "webpack-hot-middleware": "2.19.1",
-    "webpack-merge": "4.1.1"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
     "electron-debug": "^1.1.0",
