--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postinstall": "yarn build",
     "dev": "yarn hot-server --start-hot",
     "package": "npm run build && build --publish never",
+    "package-mac": "npm run build && build --mac",
     "package-win": "npm run build && build --win --x64",
     "package-linux": "npm run build && build --linux",
     "package-all": "npm run build && build -mwl",
@@ -89,33 +90,33 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/enzyme": "3.1.1",
-    "@types/history": "4.6.0",
-    "@types/jest": "22.2.3",
-    "@types/node": "8.10.11",
-    "@types/react": "16.0.5",
-    "@types/react-dom": "16.0.3",
-    "@types/react-hot-loader": "3.0.4",
-    "@types/react-redux": "5.0.7",
-    "@types/react-router": "4.0.15",
-    "@types/react-router-dom": "4.0.7",
-    "@types/react-router-redux": "5.0.8",
-    "@types/redux-logger": "3.0.3",
-    "@types/sinon": "4.1.2",
-    "asar": "0.14.0",
+    "@types/enzyme": "^3.1.10",
+    "@types/history": "^4.6.2",
+    "@types/jest": "^22.2.3",
+    "@types/node": "^10.3.0",
+    "@types/react": "^16.3.16",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/react-redux": "^6.0.0",
+    "@types/react-router": "^4.0.26",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/react-router-redux": "^5.0.14",
+    "@types/redux-logger": "^3.0.6",
+    "@types/sinon": "^5.0.1",
+    "asar": "^0.14.3",
     "awesome-typescript-loader": "^5.0.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "boiler-room-custodian": "0.6.2",
-    "concurrently": "3.5.0",
-    "cross-env": "5.0.5",
-    "css-loader": "0.28.7",
-    "css-modules-require-hook": "4.1.0",
-    "devtron": "1.4.0",
-    "electron": "1.8.4",
-    "electron-builder": "19.28.1",
-    "electron-builder-http": "19.27.5",
-    "electron-devtools-installer": "2.2.0",
+    "concurrently": "^3.5.1",
+    "cross-env": "^5.1.6",
+    "css-loader": "^0.28.11",
+    "css-modules-require-hook": "^4.2.3",
+    "devtron": "^1.4.0",
+    "electron": "^2.0.2",
+    "electron-builder": "^20.15.1",
+    "electron-builder-http": "^19.27.5",
+    "electron-devtools-installer": "^2.2.4",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "express": "4.15.4",
@@ -147,18 +148,18 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "electron-debug": "^1.1.0",
+    "electron-debug": "^2.0.0",
     "font-awesome": "^4.7.0",
-    "history": "^4.6.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.1",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "react-router-redux": "^5.0.0-alpha.6",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "source-map-support": "^0.5.0"
+    "history": "^4.7.2",
+    "react": "16.3.0",
+    "react-dom": "16.3.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "source-map-support": "^0.5.6"
   },
   "devEngines": {
     "node": ">=8.x",
